# LearnGL

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  camera.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  texture.cpp  texture.h  tuplehash.h  utils.h  window.h
convert/: convert.py
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
materials/: basic.mtl
meshes/: capsule.mesh  skybox.mesh  sphere.mesh  test.mesh
shaders/: fragment  fragment.frag  lighting.frag  lighting.fs  lighting.vert  lighting.vs  skybox.vert  vertex
